<resources>
    <string name="app_name">Robotex</string>
    <string name="api_key">9fca03d34a934e0fb335d22211eb007b</string>
    <string name="logOutButton">logOutButtonPref</string>

    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>


    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Settings">Settings</string>
    <string name="prefrence_switch_Summary">Switch between light and dark theme</string>
    <string name="prefrence_timedelay_Summary">Choose how often is the new data downloaded (days)</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="liked_recipes">Liked Recipes</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="to_register">To register page</string>
    <string name="liked_list_picture">Liked list picture</string>
    <string name="log_out_button_picture">Log out button picture</string>
    <string name="recipe_name">Recipe name</string>
    <string name="source">Source</string>
    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="similar_recipes">Similar Recipes</string>
    <string name="meal_image">meal image</string>
    <string name="register">Register</string>
    <string name="to_login_page">To login page</string>
    <string name="instructions">Instructions</string>
    <string name="item">Item</string>
    <string name="instructions_picture">instructions picture</string>
    <string name="_1">1</string>
    <string name="step_name">Step Name</string>
    <string name="equipments">Equipments</string>
    <string name="dish_name">Dish Name</string>
    <string name="_2_persons">2 Persons</string>
    <string name="start_picture">start picture</string>
    <string name="time_pic">time pic</string>
    <string name="servings">servings</string>
    <string name="food2">food2</string>
    <string name="_1_pc">1 pc</string>
    <string name="veggies">Veggies</string>
    <string name="like">Like</string>
    <string name="similar_name">Similar Name</string>
    <string name="menu">Menu</string>


</resources>