<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/Settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:summary="@string/prefrence_switch_Summary"
            android:title="Dark mode"
            app:defaultValue="false" />
        <ListPreference
            android:title="Data delay"
            android:key="drop_datadelay"
            android:summary="@string/prefrence_timedelay_Summary"
            android:defaultValue="1"
            android:entries="@array/delay_values"
            android:entryValues="@array/delay_values"
            />
    </PreferenceCategory>


</PreferenceScreen>