<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appbackground"
    tools:context=".RecipeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        app:title="Details"
        app:titleTextColor="@color/apptextcolor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_meal_name"
                android:text="@string/recipe_name"
                android:textSize="@dimen/testSize20dp"
                android:gravity="center"
                android:textColor="@color/apptextcolor"
                android:padding="@dimen/margin8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_meal_source"
                android:text="@string/source"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/apptextcolor"
                android:textSize="@dimen/testSize14sp"
                android:padding="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imageView_meal_image"
                android:layout_margin="@dimen/margin8dp"
                android:contentDescription="@string/meal_image"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height250dp"/>
            <TextView
                android:id="@+id/textView_meal_summary"
                android:text="@string/summary"
                android:textSize="@dimen/testSize14sp"
                android:textColor="@color/apptextcolor"
                android:maxLines="5"
                android:textStyle="normal"
                android:padding="@dimen/margin8dp"
                android:layout_margin="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_meal_instructions"
                android:layout_margin="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/similar_recipes"
                android:textStyle="bold"
                android:textColor="@color/apptextcolor"
                android:textSize="@dimen/testSize18sp"
                android:padding="@dimen/margin8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_meal_similar"
                android:layout_margin="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/ingredients"
                android:textStyle="bold"
                android:textColor="@color/apptextcolor"
                android:textSize="@dimen/testSize18sp"
                android:padding="@dimen/margin8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_meal_ingredients"
                android:layout_margin="@dimen/margin8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>