<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/appsmallboxes"
    android:elevation="@dimen/margin8dp"
    android:layout_margin="@dimen/margin8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_ingredients_quantity"
            android:text="@string/_1_pc"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/textSize16sp"
            android:padding="@dimen/margin4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imageView_ingredients"
            android:contentDescription="@string/ingredients"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/size80dp"
            android:layout_height="@dimen/size50dp"/>
        <TextView
            android:id="@+id/textView_ingredients_name"
            android:text="@string/veggies"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textSize="@dimen/textSize16sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="@dimen/margin4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>