<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/appmainboxes"
    app:cardElevation="@dimen/margin8dp"
    android:layout_margin="@dimen/margin4dp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_instructions_step_number"
            android:text="@string/_1"
            android:textStyle="bold"
            android:textSize="@dimen/testSize18sp"
            android:textAlignment="center"
            android:textColor="@color/apptextcolor"
            android:padding="@dimen/margin8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView_instructions_step_title"
            android:text="@string/step_name"
            android:textStyle="bold"
            android:textSize="@dimen/testSize18sp"
            android:textAlignment="textStart"
            android:textColor="@color/apptextcolor"
            android:padding="@dimen/margin8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/equipments"
            android:textColor="@color/apptextcolor"
            android:textAlignment="textStart"
            android:textSize="@dimen/testSize18sp"
            android:textStyle="bold"
            android:padding="@dimen/margin8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_instructions_equipments"
            android:layout_margin="@dimen/margin4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/ingredients"
        android:textColor="@color/apptextcolor"
        android:textAlignment="textStart"
        android:textSize="@dimen/testSize18sp"
        android:textStyle="bold"
        android:padding="@dimen/margin8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_instructions_ingredients"
        android:layout_margin="@dimen/margin4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>