<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin8dp"
    android:id="@+id/random_list_container"
    app:cardBackgroundColor="@color/appbackground"
    app:cardElevation="@dimen/margin8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/appmainboxes">


        <TextView
            android:id="@+id/textView_title"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textStyle="bold"
            android:textColor="@color/apptextcolor"
            android:textSize="@dimen/textSize22sp"
            android:padding="@dimen/margin8dp"
            android:text="Dish Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imageView_food"
            android:contentDescription="@string/food2"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/margin8dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_servings"
                    android:contentDescription="@string/servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_Servings"
                    android:textSize="@dimen/testSize14sp"
                    android:padding="@dimen/margin8dp"
                    android:text="@string/_2_persons"
                    android:textColor="@color/apptextcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_like"
                    android:contentDescription="@string/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_Likes"
                    android:textSize="@dimen/testSize14sp"
                    android:padding="@dimen/margin8dp"
                    android:text="@string/_2_persons"
                    android:textColor="@color/apptextcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/time_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_time"
                    android:textSize="@dimen/testSize14sp"
                    android:padding="@dimen/margin8dp"
                    android:text="@string/_2_persons"
                    android:textColor="@color/apptextcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/likeLinearLayoutButton"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/starImage"
                    android:contentDescription="@string/liked_list_picture"
                    android:src="@drawable/ic_baseline_star_outline_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/AddFavorites"
                    android:padding="8dp"
                    android:text="@string/like"
                    android:textAlignment="center"
                    android:textColor="@color/apptextcolor"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>